--- a/style.css
+++ b/style.css
@@ -62,24 +62,32 @@ blockquote::before {
     text-align: center;
 }
 
-.btn
+a.button
 {
-    padding: 15px 25px;
-    display: inline-block;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #f1f1f1;
-    background-color:#573A57;
-    cursor: pointer;
-    font-size: 20px;
-    text-align: center;
- 
-   
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    color:black;
+    font-size: medium;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;  
     
 }
-.btn:hover
+a.button:hover
 {
-    background-color:lavender;
+    background-color:white;
     color: #573A57;
 
+}
+@media all and (max-width:30em)
+{
+    a.button3{
+    display:block;
+    margin:0.2em auto;
+    }
 }
